@@ -19,7 +19,7 @@
   - [ ] Revisit migration from local shell scripts to GitHub actions
   - [ ] Add =rust-version= to cargo manifests and update ci/cd pipeline accordingly for extracting versions
 
-* Milestone: Usability and features stabilization [100%]
+* Milestone: Usability and features stabilization [85%]
 
 - [X] Improved conversions
   - [X] Custom output location for individual documents in the conversion queue
@@ -32,7 +32,8 @@
   - [X] Display overall conversion results ("X out of Y files were not successfully converted")
   - [X] Prompt for confirmation prior closing the application during conversions (Desktop only)
   - [X] Manual check for release updates (Desktop and command-line clients)
-- [X] Security
+- [-] Security
+  - [ ] Provide custom container security profile
   - [X] Review container execution options (subject of recurring reviews)
   - [X] Review some of the code and read few security-related articles (subject of recurring reviews)    
   - [X] Document periodic container vulnerability assessments (new =org-mode= file)
